# breastaicancer

./: LICENSE  README.md  environment.yml  pyproject.toml
docs/: configuration_setup.md  configuration_setup.pt-BR.md  how_to_run.md  how_to_run.pt-BR.md
scripts/: run_etl.ipynb  run_eval.py  run_extract.py  run_load.py  run_model.ipynb  run_training_best.py  run_transform.py  run_tuning.py  run_tuning_mlflow.py
src/hapcancer/: config_manager.py  hashing.py  logger.py  mlflow_setup.py
src/hapcancer/cli/: cli.py  functions.py
src/hapcancer/etl/: utils.py
src/hapcancer/etl/extract/: extractor.py  queries.py
src/hapcancer/etl/load/: main.py  precompute.py  setup_final_eligibility.py  utils.py
src/hapcancer/etl/transform/: merge_sources.py
src/hapcancer/etl/transform/embeddings/: embed.py  utils.py
src/hapcancer/etl/transform/preprocessing/: biopsy_report_classifier.py  preprocess.py  shortcut_terms.py  utils.py
src/hapcancer/eval/: eda.py  evaluation.py  log_manager.py  metrics.py
src/hapcancer/model/_legacy/: config_loss.py  dataloaders.py  model.py  model_io.py  train_multiyear.py  train_multiyear_.py  tuning.py
src/hapcancer/model/architecture/: architecture.py  prediction_model.py
src/hapcancer/model/dataload/: dataloaders.py  datasets.py  load_input.py
src/hapcancer/model/loss/: config_loss.py  custom_loss.py
src/hapcancer/model/training/: train_singleyear.py  train_singleyear_mlflow.py  tuning.py  tuning_mlflow.py  utils.py
src/hapcancer/schemas/: enums.py  logs.py  validation.py  validation_models.py
(+5 files in other folders)
